deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: argocd
  name: argocd
